--- a/_posts/2022-11-04-INMEDIA-流徙之女-七年間公演四次-談移英後代身分-導演-此時上演很應境.html
+++ b/_posts/2022-11-04-INMEDIA-流徙之女-七年間公演四次-談移英後代身分-導演-此時上演很應境.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/BBC.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>在2013至14年，雨傘運動爆發前後那段時間，胡海輝記得香港社會對「身分」有很多討論：「當時有個好hit的話題 —— 甚麼是『香港人』？當然這是相對『中國人』而言。我想用劇場去思考這議題。」翌年，他與編輯鄭廸琪把在英華人Helen Tse的回憶錄《Sweet Mandarin》，改編成舞台劇《流徙之女》。Helen Tse在書中講述自己作為移民者的後代，如何在傳統家鄉菜餚中找到自己的身分。</p>
+<img src="https://www.inmediahk.net/files/column_images/BBC.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>在2013至14年，雨傘運動爆發前後那段時間，胡海輝記得香港社會對「身分」有很多討論：「當時有個好hit的話題 —— 甚麼是『香港人』？當然這是相對『中國人』而言。我想用劇場去思考這議題。」翌年，他與編劇鄭廸琪把在英華人Helen Tse的回憶錄《Sweet Mandarin》，改編成舞台劇《流徙之女》。Helen Tse在書中講述自己作為移民者的後代，如何在傳統家鄉菜餚中找到自己的身分。</p>
 <p>《流徙之女》首演好評如潮，很快就有重演機會。2018年，他們獲邀到上海1862時尚藝術中心「香港演出月」演出，2020年入選藝發局「賽馬會藝壇新勢力」重演，那時已經有媒體問胡海輝，是否回應移民潮。他說當時也不算有太大感受，直至2022年，《流徙之女》第四次公演，他才覺得這套戲對應到時代：「暑假吃過不少『farewell飯』…… 移民、流徙的問題，好像跟香港人脫離不到，令我想起套戲。唏噓之餘，也想探討去到外地的香港人，可以如何承傳生活，此時上演是很應境。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/847iz8TqyV" title="20221005 專訪《流徙之女》舞台劇 攝影：鍾健華"><img src="https://live.staticflickr.com/65535/52472993565_bc38e82712_c.jpg" width="800" alt="20221005 專訪《流徙之女》舞台劇 攝影：鍾健華" /></a><br /><em>《流徙之女》綵排照</em></p>
 <p><strong>Where are you from? 異地裡思考香港人身分</strong>  </p>
@@ -20,8 +20,8 @@ author: 獨媒報導
 <p><strong>中國人？英國人？ 不可以被用舊有的界定</strong></p>
 <p>同年，胡海輝與鄭廸琪前往英國，到訪Sweet Mandarin餐廳；那裡採用西式裝修，桌上卻是一碟碟香氣撲鼻的中菜。鄭說，Helen與她預想中的BBC（British Born Chinese，英國出生的華人）很不同：「也許我們平時在香港接觸的，都大多被香港同化了，但Helen最多在香港住過半年，真的只是講很少中文，大部分時間都用英文溝通。那你怎樣去界定？Chinese？其實她不像…… 中國人？英國人？我感覺是不可以用舊有的來界定她。」</p>
 <p>鄭廸琪認為，改編別人的作品時，不能偏離真實或作者原意，因此不應嘗試把自己代入角色，而是找出可以共同分享的地方 ：「例如身分吧，Who am I？是每個人都會問的。」她又強調Helen不是最初決定去追尋身分，而是很普通地生活，之後才在當中尋見自己。</p>
-<p>在澳門長的鄭廸琪，大學時期開始在香港定居，後來與胡海輝結婚，並參與不少本地劇團製作。個人經歷使她明白身分迷失的感受：「別人問Where are you from？那我答澳門？還是香港？這兩地只有那麼細微的分別，但我到現在也不懂說。」</p>
-<p>另一樣把鄭廸琪與Helen連結的共嗚，就是食物。「食譜提到芒果魚肉雲吞，我就很喜歡芒果，所以連結得到。書的內容實在太家常便飯，你總會找到自己的痕跡。其實他們煮的東西很普通，都是雞煲、炒麵、咖喱那些，但為甚麼每個人煮出來的味道不同？就代表每個家庭的故事。」</p>
+<p>在澳門成長的鄭廸琪，大學時期開始在香港定居，後來與胡海輝結婚，並參與不少本地劇團製作。個人經歷使她明白身分迷失的感受：「別人問Where are you from？那我答澳門？還是香港？這兩地只有那麼細微的分別，但我到現在也不懂說。」</p>
+<p>另一樣把鄭廸琪與Helen連結的共鳴，就是食物。「食譜提到芒果魚肉雲吞，我就很喜歡芒果，所以連結得到。書的內容實在太家常便飯，你總會找到自己的痕跡。其實他們煮的東西很普通，都是雞煲、炒麵、咖喱那些，但為甚麼每個人煮出來的味道不同？就代表每個家庭的故事。」</p>
 <p>在Helen Tse所寫食譜裡，除了介紹煮法，每道菜也有自己專屬故事，例如「雞煲」就是她媽媽的最愛—— 當時唐人街還沒有賣雞煲，要吃就要自己煮；一放紹興酒時，香味猛然湧出來，就像把大家帶返香港一樣。鄭廸琪相信，Helen想推廣與傳承的不止食物，更是一種生活態度。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/04xDGLcLN7" title="20221005 專訪《流徙之女》舞台劇 攝影：鍾健華"><img src="https://live.staticflickr.com/65535/52472994390_f6de9f7914_c.jpg" width="800" alt="20221005 專訪《流徙之女》舞台劇 攝影：鍾健華" /></a><br /><em>《流徙之女》綵排照</em></p>
 <p><strong>「留下」？我們只是如常地生活</strong></p>
