--- a/_posts/2022-11-07-INMEDIA-任職醫管局期間曾去信追究罷工醫護-彭飛舟任基層醫療專員.html
+++ b/_posts/2022-11-07-INMEDIA-任職醫管局期間曾去信追究罷工醫護-彭飛舟任基層醫療專員.html
@@ -8,7 +8,8 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202211074_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>《施政報告》要推出「基層醫療健康藍圖」，醫務衞生局宣布由彭飛舟出任「基層醫療健康專員」，今日履新，他將由醫管局借調到醫務衞生局。彭飛舟在2020年新型肺炎爆發初期任職人力資源主管，當時醫護界發動罷工要求港府全面封關，彭飛舟去信全體醫護，表示醫管局將就「未獲批准的缺勤」保留追究權利，被前線醫線批評。他其後以個人理由辭職。</p>
+<img src="https://www.inmediahk.net/files/column_images/202211076.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>彭飛舟（資料圖片）</em></p>
+<p><font color="#e4692b">【獨媒報導】</font>《施政報告》要推出「基層醫療健康藍圖」，醫務衞生局宣布由彭飛舟出任「基層醫療健康專員」，今日履新，他將由醫管局借調到醫務衞生局。彭飛舟在2020年新型肺炎爆發初期任職人力資源主管，當時醫護界發動罷工要求港府全面封關，彭飛舟去信全體醫護，表示醫管局將就「未獲批准的缺勤」保留追究權利，被前線醫線批評。他其後以個人理由辭職。</p>
 <p>醫務衞生局在新聞公告表示，彭飛舟具備豐富的公共醫療發展及管理經驗，將會帶領基層醫療健康辦事處推動基層醫療發展，包括成立「基層醫療健康管理局」、推動防治和管理慢性疾病的工作等。彭飛舟本身為一位老人科專科醫生，亦為現任香港社會醫學學院院長，他曾擔任安老事務委員會成員。</p>
 <p>彭飛舟在2016年5月任葛量洪醫院行政總監，2017年11月起兼任東華醫院行政總監。彭也曾在醫管局總部出任總行政經理（醫療職系）及總行政經理（質素及標準）職位，2018年10月任醫管局人力資源主管。<br />
  <br />
