--- a/_posts/2022-11-07-INMEDIA-立場案-辯方申永久終止聆訊-還柙逾10個月林紹桐獲准保釋.html
+++ b/_posts/2022-11-07-INMEDIA-立場案-辯方申永久終止聆訊-還柙逾10個月林紹桐獲准保釋.html
@@ -8,18 +8,27 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20221107s.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>《立場新聞》母公司、前總編輯鍾沛權及前署任總編輯林紹桐被控「串謀發布煽動刊物」罪，還柙至今逾10個月，今（7日）於區域法院續審。庭上早前披露警方曾擷取大量《立場》文章但未交出，控方今早新呈遞6個文件夾、逾千頁文件予辯方。辯方資深大律師余若薇指截圖警員「口供有出入」，或影響盤問方向，下午申請永久終止審訊，預計需3周準備陳詞，排期12月13至14日處理。辯方另為林紹桐申請保釋，遭控方反對，國安法指定法官郭偉健聽畢雙方陳詞後，批准他以現金5萬元及妻子的人事擔保5萬元保釋。至於鍾沛權則未有申請保釋。</p>
-<p>法官宣布結果後，旁聽席有人面露驚訝、有人鬆一口氣，林紹桐妻子雙眼通紅拭淚，林紹桐神情輕鬆，望向旁聽席。</p>
+<img src="https://www.inmediahk.net/files/column_images/20221107s.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>《立場新聞》母公司、前總編輯鍾沛權及前署任總編輯林紹桐被控「串謀發布煽動刊物」罪，還柙至今逾10個月，今（7日）於區域法院續審。控方今早新呈逾千頁文件予辯方，辯方資深大律師余若薇指新呈口供與早前警員「有出入」，或影響盤問方向，下午申請永久終止審訊，並為林紹桐申請保釋。</p>
+<p>控方反對林保釋，稱新文件大部分文章「類似煽動性」，永久終止聆訊成功申請機會不大。國安法指定法官郭偉健同意被告若遭扣留，會影響辯方索取指示和作申請，終批准林紹桐以現金5萬元及妻子人事擔保5萬元保釋，條件包括不得受訪和發布危害國安的言論等。另鍾沛權沒有保釋申請，須繼續還柙。</p>
+<p>法官宣布結果後，旁聽席有人面露驚訝、有人鬆一口氣，林紹桐妻子雙眼通紅，後除下口罩拭淚，林紹桐則神情輕鬆，望向旁聽席。案件排期至12月13至14日處理辯方的永久終止聆訊申請，若申請遭拒，將於12月19日至明年1月27日續審。</p>
 <p><strong>辯方擬申永久終止審訊 預計需3星期準備陳詞</strong></p>
 <p>庭上早前披露警方曾擷取大量《立場》文章但未交出，控辯雙方昨晚深夜收到負責指示截圖的偵緝高級督察盧健賢的供詞，控方並於今早將6個文件夾、過千頁文件交予辯方。辯方表示<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E7%AB%8B%E5%A0%B4%E6%A1%88%E3%80%91%E5%AF%A9%E8%A8%8A%E7%AC%AC%E4%BA%94%E6%97%A5%E6%94%B6%E6%8E%A7%E6%96%B9%E9%81%8E%E5%8D%83%E9%A0%81%E6%96%B0%E6%96%87%E4%BB%B6-%E8%BE%AF%E6%96%B9%EF%BC%9A%E6%88%96%E7%94%B3%E6%B0%B8%E4%B9%85%E7%B5%82%E6%AD%A2%E8%81%86%E8%A8%8A">擬申請永久終止聆訊</a>，押後至下午待索取指示。</p>
-<p>辯方資深大律師余若薇下午表示，與兩被告會面後，認為應申請永久終止審訊。她透露，控方新呈交的6個文件夾只有一套，亦無電子版本、需要影印，但兩名被告正在還柙，每天審訊結束後「舟車勞碌」，返回監獄後已無法考慮其他文件或指示，要進行商討有困難。</p>
-<p>余又指，昨晚偵緝高級督察盧健賢的供詞提及另一位陳姓上司，辯方需索取其口供；亦因盧的口供與早前警員「有一定出入」，故需索取早前作供警的口供錄音和謄本準備陳詞，預計需時約3星期。</p>
-<p>控方表示，辯方提交書面陳詞後，需要不少於3個工作天作書面回應，約一星期可定下兩日審期，屆時或會傳召盧健賢和其上司作供，其後控辯雙方會進行陳詞。</p>
-<p><strong>12.13永久終止聆訊 預留12月中至明年1月續審</strong></p>
-<p>郭偉健將案件排期至12月13至14日處理永久終止聆訊申請，若申請不成功，將預留12月19日至明年1月27日審訊</p>
-<p><strong>林紹桐申請保釋獲批</strong></p>
-<p>余若薇其後為林紹桐申請保釋，遭控方反對。國安法指定法官郭偉健聽畢雙方陳詞後，批准其保釋。</p>
-<p><strong>其保釋條件如下：</strong></p>
+<p>辯方資深大律師余若薇下午表示，與兩被告會面後，認為應申請永久終止審訊。她指，昨晚偵緝高級督察盧健賢的供詞提及另一位陳姓上司，辯方需索取其口供；亦因盧的口供與早前警員「有一定出入」，故需索取早前作供警的口供錄音和謄本準備陳詞，預計需時約3星期準備陳詞。控方亦需不少於3個工作天回應，預計聆訊需時兩日，或會傳召盧健賢和其上司作供。</p>
+<p>一般來說，當辯方認為案件出現濫用程序的情況，或不可能達致公平審訊，可向法庭申請永久終止聆訊。</p>
+<p><strong>林紹桐申保釋候準備永久終止聆訊陳詞 傳媒申解除報導限制獲批</strong></p>
+<p>就永久終止聆訊申請，余若薇透露，控方新呈交的6個文件夾只有一套，亦無電子版本、需要影印，但兩名被告正在還柙，每天審訊結束後「舟車勞碌」，返回監獄後已無法考慮其他文件或指示，要進行商討有困難，望為林紹桐申保釋方便索取指示。</p>
+<p>傳媒申請解除《刑事訴訟程序條例》第9P條對報導保釋法律程序的限制獲批。余若薇表示，林紹桐有頗嚴重的健康問題，患免疫系統失調，免疫力幾乎零，自2020年頭多次進出醫院接受標靶治療及換血，曾請病假約60日。他還柙後身體狀況很差，留院約一個月才轉至荔枝角收押所，惟未能如期覆診和進行療程。他不能打新冠疫苗，在獄中染疫風險大，甚至可能致命。</p>
+<p>余指，林與妻子育有一名兩歲女兒，亦需供養父母，是家中最主要經濟來源。本案最高刑罰兩年，但沒有刑事記錄的被告已還柙近一年。</p>
+<p><strong>辯方稱林僅負責兩篇涉案文章 報導亦獲其他傳媒跟進</strong></p>
+<p>余續指，煽動刊物雖屬嚴重罪行，但涉案17篇文章中有15篇刊出時，林僅任副總編輯，亦因病而長期請病假和留家休息，「唔係佢負責」。餘下由林負責的中大衝突一文，辯方指警方投訴後，林已作「fact check（事實查核）」並在文中提及警方投訴；而當時《國安法》通過逾一年，特首林鄭月娥等亦稱社會恢復平靜，「你話文章係想重燃暴力根本係非常牽強」。至於報導鄒幸彤獲頒「中國傑出民主人士奬」一文，辯方指僅引述鄒幸彤在 Facebook 的感言，除了《立場》外亦有很多其他傳媒報導。</p>
+<p><strong>辯方：唔係我哋造成嘅局面 控方：新文件「類似煽動性」</strong></p>
+<p>余若薇強調，「呢個唔係我哋製造出嚟嘅情況」，直指控方沒有將所有資料向辯方提供，是違反一般檢控指引，亦違反審前覆核時，法官要求7天內將所有資料交辯方的指示，「呢個唔係我哋造成嘅局面」，望法庭可批准林保釋。</p>
+<p>伍淑娟反對林紹桐保釋，表示新增的逾千頁文件均「類似煽動性」，最終也未必能幫助辯方，「Stay application（永久終止聆訊）成功機會未必會好高」。</p>
+<p><strong>官批保釋：出現呢個情況好明顯唔關辯方事</strong></p>
+<p>辯方透露需時3星期準備陳詞，郭偉健一度問，若林紹桐不獲保釋，是否需要更長時間。余若薇回應，被告受審期間早出晚歸，她上周六亦未能預約探訪。而作出永久終止聆訊申請需與被告理解文件和討論細節，若要在被告還柙時完成「根本冇可能」，亦「冇可能做到妥當申請」。</p>
+<p>就保釋金，余若薇提及林紹桐一直從事傳媒工作，家境不富裕，其妻子是家庭主婦及兼職文員，只能繳交10萬元保釋金。郭偉健聞言問：「《立場》2019年收入突然多咗十倍？」余回應，林的薪金沒有上調，只是去年升任署任總編輯才「加人工」。</p>
+<p>郭偉健聽罷雙方陳詞後表示，由於環境上的改變，批准林紹桐保釋。他同意辯方所指，被告扣留監房，或影響辯方索取指示和作出申請，但認為本案應盡快進行。加上「今日出現呢個情況好明顯唔關辯方事，係突然發生嘅事件」，故批准林以現金5萬元及妻子的人事擔保5萬元保釋。</p>
+<p><strong>詳細保釋條件如下：</strong></p>
 <blockquote><p> • 5萬元現金<br />
  • 妻子人事擔保5萬元<br />
  • 不得離開香港<br />
@@ -53,5 +62,5 @@ f) 慫使他人不守法或不服從合法命令</p></blockquote>
 【立場案】<a href="https://www.inmediahk.net/node/1092549/">警認帖文留言「舉手瓜」符號屬支持 辯方稱證人非專家拒納證供</a></p>
 <p><strong>審訊第五日</strong><br />
 【立場案】<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E7%AB%8B%E5%A0%B4%E6%A1%88%E3%80%91%E5%AF%A9%E8%A8%8A%E7%AC%AC%E4%BA%94%E6%97%A5%E6%94%B6%E6%8E%A7%E6%96%B9%E9%81%8E%E5%8D%83%E9%A0%81%E6%96%B0%E6%96%87%E4%BB%B6-%E8%BE%AF%E6%96%B9%EF%BC%9A%E6%88%96%E7%94%B3%E6%B0%B8%E4%B9%85%E7%B5%82%E6%AD%A2%E8%81%86%E8%A8%8A">審訊第五日收控方過千頁新文件 辯方：或申永久終止聆訊</a><br />
-【立場案】還柙逾10個月 時任署任總編輯林紹桐保釋申請獲批</p>
+【立場案】辯方申永久終止聆訊 還柙逾10個月林紹桐獲准保釋</p>
 </div></div></div>
