--- a/_posts/2022-11-08-INMEDIA-當局提-青衣至大嶼山連接路-新方案-與青嶼幹線平行.html
+++ b/_posts/2022-11-08-INMEDIA-當局提-青衣至大嶼山連接路-新方案-與青嶼幹線平行.html
@@ -19,6 +19,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/yzy12KFuH5" title="Untitled"><img src="https://live.staticflickr.com/65535/52485725909_78dc55b47f_h.jpg" width="1600" alt="Untitled" /></a></p>
 <p><strong>路政署：已確保交匯處支路容車量</strong></p>
 <p>民主黨葵青區議員林紹輝問到擬建的北大嶼山交通交匯處如出現意外時，會否造成嚴重擠塞。他又問到工程對生態的影響及能否設單車徑。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/xY63T2JrPB" title="Untitled"><img src="https://live.staticflickr.com/65535/52485725979_d8376c5e1e_h.jpg" width="1600" alt="Untitled" /></a><br /><em>林紹輝</em></p>
 <p>路政署工程管理組長杜錦標表示，北大嶼山交通交匯處的支路與現有青嶼幹線的支路彼此分開。奧雅納工程顧問項目經理關志輝指，已進行初步環境評估，走線已避開生態敏感帶及民居。署方表明無意設立單車徑。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Ys711VEk7c" title="Untitled"><img src="https://live.staticflickr.com/65535/52485993968_a8a8cad8f1_h.jpg" width="1600" alt="Untitled" /></a></p>
 </div></div></div>
