--- a/_posts/2022-11-08-INITIUM-台湾人也处在-另类事实-的平行宇宙吗-数字给我们乐观理由.html
+++ b/_posts/2022-11-08-INITIUM-台湾人也处在-另类事实-的平行宇宙吗-数字给我们乐观理由.html
@@ -11,5 +11,5 @@ author: 谢达文
 <p>「一个社会是否陷入“另类事实”的分裂状态，彼此间是否处于平行宇宙，是个可以被实际检验的问题。」</p><p>谢达文</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221109taiwan-alternative-facts/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/df2eb87de593482da1ddb1eb5849a29e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月5日，台北市长候选人电视辩论。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年11月5日，台北市长候选人电视辩论。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p><strong>（谢达文，国立台湾大学社会学研究所博士候选人）</strong></p>
 <p>近年来，许多人担心社会中的公共对话呈现“极端化”现象，这是由于人们立场差异，因而从不同的资讯管道获取他们想要知道的讯息，因为这样的“各取所需”、甚而扭曲资讯，导致人们的立场愈来愈极端，沟通愈来愈困难，社会的对立与撕裂也愈加明显。</p>
-<p>这种担忧其来有自，以美国的社会现象观察，从选举是否公平、政党政见本身，乃至各种大大小小的事实问题（比如特朗普，台湾译川普就职典礼参与人数多寡），各家媒体报导多所差异，导致人们对基本事实的看法不一，像是对于疫情严重与否、需要采取什么样的防护措施，人们也都有认知上的差异，形成所谓的“另类事实”（alternative fact）。</p>
+<p>这种担忧其来有自，以美国的社会现象观察，从选举是否公平、政党政见本身，乃至各种大大小小的事实问题（比如特朗普，台湾译川普，就职典礼参与人数多寡），各家媒体报导多所差异，导致人们对基本事实的看法不一，像是对于疫情严重与否、需要采取什么样的防护措施，人们也都有认知上的差异，形成所谓的“另类事实”（alternative fact）。</p>
 <p>在台湾，有论者认为台湾已经陷入这样的困境，亲国民党的评论者，甚至国民党候选人本身，对特定“亲绿”媒体毫无信任，例如2020年总统候选人韩国瑜就公开批评特定媒体“造谣”、“没水准”。相反地，民进党的支持者，也往往认为亲国民党的媒体对民进党造谣、抹黑，这点尤其反映在亲子间的冲突上：在2020年选举期间，便时常可在网路上读到“看中天新闻的韩粉爸妈”与“支持蔡英文的子女”间争执故事便为显例。</p>
