--- a/_posts/2022-11-09-INMEDIA-陳恒鑌指七欖-高風險-仍可狂歡-露營地點應盡快開放.html
+++ b/_posts/2022-11-09-INMEDIA-陳恒鑌指七欖-高風險-仍可狂歡-露營地點應盡快開放.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/11091610-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>特首李家超向外宣稱香港已邁向「復常」，但港人生活和娛樂仍受限制，例如露營地點仍然關閉。民建聯議員陳恒鑌在立法會質詢，問及營地開放時間表。陳恒鑌質疑七人欖球賽是「更高風險活動」，「都可以盡興狂歡」，仍然關閉營地是非常不合理。環境局局長謝展寰表示抗疫要「穩打穩紮」，政府暫時會對「人數多、對經濟動力有幫助」的活動優先開放，確保疫情不會反彈。</p>
+<img src="https://www.inmediahk.net/files/column_images/11091610-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>特首李家超向外宣稱香港已邁向「復常」，但港人生活和娛樂仍受限制，例如露營地點仍然關閉。民建聯議員陳恒鑌在立法會質詢，問及營地開放時間表。陳恒鑌質疑七人欖球賽是「更高風險活動」，「都可以盡興狂歡」，仍然關閉營地是非常不合理。環境及生態局局長謝展寰表示抗疫要「穩打穩紮」，政府暫時會對「人數多、對經濟動力有幫助」的活動優先開放，確保疫情不會反彈。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/q99Z27P5DD" title="無標題"><img src="https://live.staticflickr.com/65535/52488204318_c947a1152e_z.jpg" alt="無標題" /></a><br /><em>陳恒鑌</em></p>
 <p>陳恒鑌在口頭質詢指，露營在疫情期間成為不少市民的假日活動，但政府轄下的露營地點關閉超過兩年仍未重開，問政府的開放時間表。謝展寰引述數據指在2017年至去年期間，署方根據《郊野公園條例》執法數字，包括353宗警告及266宗檢控，但單單是今年頭三季，已發出146宗警告及182宗檢控。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/jG213u789H" title="1212272"><img src="https://live.staticflickr.com/65535/52015426528_8c3d9e5b46_z.jpg" alt="1212272" /></a><br /><em>資料圖片</em></p>
