--- a/_posts/2022-11-09-INMEDIA-8.31太子站暴動案-受襲乘客否認曾推黑衣人-稱如朋友搭膊頭-拿膠喉僅作勢襲擊.html
+++ b/_posts/2022-11-09-INMEDIA-8.31太子站暴動案-受襲乘客否認曾推黑衣人-稱如朋友搭膊頭-拿膠喉僅作勢襲擊.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_364.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年8月31日多區發生警民衝突，晚上警方衝入太子站追截示威者並揮棍攻擊車廂市民，震驚全港。至今共3人在事件中罪成。另3名學生否認暴動等，今（9日）在區域法院第三日續審。受襲市民X接受盤問，辯方指出，X及其他乘客曾將黑衣人趕出車廂，X不同意是「趕」，僅用手勢「請」他們離開。X又否認曾用手推黑衣人，「無真係用力推，用手掂到佢哋身體同膊頭」，但隨即改稱：「你可以話推嘅，但好細力咁推」，最後他又改口：「我覺得唔係推囉，朋友都係搭住膊頭咁」。辯方追問其動作是否友善，X表示沒有當黑衣人是朋友。</p>
+<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_364.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年8月31日多區發生警民衝突，晚上警方衝入太子站追截示威者並揮棍攻擊車廂市民，震驚全港。至今共3人在事件中罪成。另3名學生否認暴動等，今（9日）在區域法院第三日續審。受襲市民X接受盤問，辯方指出，X及其他乘客曾將黑衣人趕出車廂，X不同意是「趕」，僅用手勢「請」他們離開。X又否認曾用手推黑衣人，「無真係用力推，用手掂到佢哋身體同膊頭」，但隨即改稱：「你可以話推嘅，但好細力咁推」，最後他又改口：「我覺得唔係推囉，朋友都係搭住膊頭咁。」辯方追問其動作是否友善，X表示沒有當黑衣人是朋友。</p>
 <p>獲匿名令及屏風下作供的證人X昨供稱，當日在車廂內見男子被黑衣人包圍指罵，故上前調停。黑衣人改為在車門外指罵，並開始向車廂掟水樽，市民亦有回擲。不久後黑衣人衝入車廂，X被雨傘及行山杖打中雙臂，亦被黑衣人用已削尖的行山杖拮頸。此時有人從後箍着X的頸部，同時車門外的黑衣人衝入車廂，欲使用雨傘及行山杖打X，X逐踢開黑衣人。X其後拾起硬身膠管防備，黑衣人見狀用行山杖打X。</p>
 <p><strong>被指如「武林高手」 證人強調拿膠喉僅「作勢」襲擊</strong></p>
 <p>X昨稱自己被黑衣人用已削尖的行山杖拮頸，惟片段顯示X實際上是被雨傘拮到。X表示當時太混亂，故注意力不是放在施襲者身上。他又不認得所有施襲者。</p>
@@ -16,9 +16,9 @@ author: 獨媒報導
 <p><strong>證人同意見乘客拿鎚子打黑衣人 但無留意有否打中</strong></p>
 <p>辯方又指出，車廂內有一名乘客拿着鎚子打向面前的黑衣人，X同意看到此情況，但當辯方追問有否打中黑衣人時，X表示沒有留意。他又承認向警方錄口供時沒有提及此事。</p>
 <p><strong>證人指黑衣人稱「打記者」認為只是藉口</strong></p>
-<p>辯方續指，片見有人稱：「做咩打記者？」，X表示聽到，但認為只是「藉口」，因黑衣人打人的時候一定會說「打記者」，實際上並無發生，惟X最後補充：「呢啲係我觀感嚟㗎啫！」。辯方追問，既然X不知道黑衣人與白衣乘客為何爭執，亦不知道有沒有人打記者，為何會稱打記者是「藉口」，X明言：「我觀感嚟啫」。他亦承認，當有人指罵白衣乘客打記者時，他沒有否認。辯方指出，有人打記者是雙方爭執的原因之一，X指不清楚。</p>
+<p>辯方續指，片見有人稱：「做咩打記者？」X表示聽到，但認為只是「藉口」，因黑衣人打人的時候一定會說「打記者」，實際上並無發生，惟X最後補充：「呢啲係我觀感嚟㗎啫！」辯方追問，既然X不知道黑衣人與白衣乘客為何爭執，亦不知道有沒有人打記者，為何會稱打記者是「藉口」，X明言：「我觀感嚟啫。」他亦承認，當有人指罵白衣乘客打記者時，他沒有否認。辯方指出，有人打記者是雙方爭執的原因之一，X指不清楚。</p>
 <p><strong>證人強調無推黑衣人 僅「用手掂到」</strong></p>
-<p>辯方續指，X及白衣乘客曾將黑衣人趕出車廂，X不同意是「趕」，僅希望他們離開車廂，並用手勢「請」他們離開。辯方問X有否推黑衣人，X表示不敢肯定，「無真係用力推，用手掂到佢哋身體同膊頭」，但隨即改稱：「你可以話推嘅，但好細力咁推」，最後他又改口：「我覺得唔係推囉，朋友都係搭住膊頭咁」。辯方追問其動作是否友善，X表示沒有當黑衣人是朋友。</p>
+<p>辯方續指，X及白衣乘客曾將黑衣人趕出車廂，X不同意是「趕」，僅希望他們離開車廂，並用手勢「請」他們離開。辯方問X有否推黑衣人，X表示不敢肯定，「無真係用力推，用手掂到佢哋身體同膊頭」，但隨即改稱：「你可以話推嘅，但好細力咁推」，最後他又改口：「我覺得唔係推囉，朋友都係搭住膊頭咁。」辯方追問其動作是否友善，X表示沒有當黑衣人是朋友。</p>
 <p><strong>證人同意他拾起膠管「作勢」揮舞會令衝突升級</strong></p>
 <p>辯方最後指，X曾用手推相機，他否認。辯方亦指因白衣乘客推記者出車廂，以及X扯走男子的帽並丟棄，導致衝突升級，X均不同意。辯方亦稱，X曾拾起地上的膠管揮舞，X反駁指不是揮舞，只是「作勢」揮舞，但他同意此舉會令衝突升級。</p>
 <p>在控方覆問下，X表示認為其中一名男子是假記者之一，因此扯走其帽子，表達不滿。</p>
@@ -33,4 +33,4 @@ author: 獨媒報導
 8.31太子站 <a href="https://www.inmediahk.net/node/1092595/">三學生否認暴動 太子站站長供稱被黑衣人包圍及用粗口責罵</a><br /><a href="https://www.inmediahk.net/node/社運/831太子站-三學生暴動案-受襲市民稱在車廂內被黑衣人用行山杖拮頸?__cf_chl_tk=veKiZDkH.MrnDL9eYeV5k42o07vDI8gwqRi6zq2Op.Q-1667978373-0-gaNycGzNCpE">8.31太子站 三學生暴動案 受襲市民稱在車廂內被黑衣人用行山杖拮頸</a></p>
 <p><strong>審訊第三日</strong><br />
 【8.31太子站暴動案】受襲乘客否認曾推黑衣人  稱如朋友搭膊頭  拿膠喉僅作勢襲擊</p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
