--- a/_posts/2022-11-10-INMEDIA-林鄭卸任首受訪指修例仍然正確-獲林兆波支持-基本上就係不說話.html
+++ b/_posts/2022-11-10-INMEDIA-林鄭卸任首受訪指修例仍然正確-獲林兆波支持-基本上就係不說話.html
@@ -20,9 +20,9 @@ author: 獨媒報導
 <p><strong>希望「做返一個普通人」  稱享受到街市買餸 </strong></p>
 <p>在今年7月「退休」的林鄭月娥，她在開場中再次以勤力自居，稱42年公務生涯從不間斷地工作，「無停過話去放假一年」，目前已習慣卸任後的生活，「有另一個角色等住我去進入，呢個就係家庭主婦，我好希望做返一個普通人，做返我丈夫嘅太太啦，我兩個仔嘅媽媽。」</p>
 <p>此外，林鄭早前到街市買餸，被市民拍下照片，她在訪談中稱家庭主婦自然要煮飯，所以特別喜歡到街市購買肉類及蔬果，「呢幾個月嚟都好享受呢一種嘅生活。」</p>
-<p><strong>曾努力Connect  指「同行」需俱「一國兩制」基礎</strong></p>
+<p><strong>曾努力Connect  指「同行」需具「一國兩制」基礎</strong></p>
 <p>在訪問中，林鄭重提五年任期內的工作，指在任期間為香港回歸以來最多挑戰，「係非常之不平凡嘅五年」，指立法會當地未有「愛國者治港」的情況下，更是非常艱巨。</p>
-<p>林鄭在競選的時候提出「同行」、「We connect」，但未能成功落實。她辯指上任後已盡最大努力，與政府意見不一致的政黨、組織嘗試聯繫、交流及溝通，但認識到「同行」需要俱有「一國兩制」的基礎，稱帶領香港「好深度咁去經過咗探索嘅過程」令一國兩制得以完善。她最後強調，在《港區國安法》立法，及落實「愛國者治港」後，香港遠較之前穩固。</p>
+<p>林鄭在競選的時候提出「同行」、「We connect」，但未能成功落實。她辯指上任後已盡最大努力，與政府意見不一致的政黨、組織嘗試聯繫、交流及溝通，但認識到「同行」需要具有「一國兩制」的基礎，稱帶領香港「好深度咁去經過咗探索嘅過程」令一國兩制得以完善。她最後強調，在《港區國安法》立法，及落實「愛國者治港」後，香港遠較之前穩固。</p>
 <p><strong>冀對台灣宣傳一國兩制  盼回國內重點大學講課</strong></p>
 <p>國家主席習近平在今年6月30日訪港，林鄭獲對方會見，希望她能繼續為香港和國家的發展作出貢獻。林鄭自言，曾在最前線經歷了一國兩制最艱難的階段，對如何實踐有進一步體會，希望不但對香港市民，亦兩對內地、台灣人民作宣傳。</p>
 <p>前行政長官董建華、梁振英在卸任後均出任全國政協副主席，外界關注林鄭的去向。林鄭表示：「我唔需要咩新嘅崗位，但係呢我都好希望能夠有呢個機會，喺我哋國家嘅重點大學裡面講一國兩制。以後我嘅時間多咗咁多，橫掂我都係遊覽國家嘅名山大川，咁我就順便可以去講課。」</p>
