--- a/_posts/2022-11-10-VOCUS-那個讓人-熱血沸騰-的男人~~.html
+++ b/_posts/2022-11-10-VOCUS-那個讓人-熱血沸騰-的男人~~.html
@@ -13,23 +13,13 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/5ca6f361-344b-4075-b752-fed081a2e8e9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">回顧歷史上的11月6日大事記，咦？難道是……不！「不」是薩克斯風（Saxophone）的發明紀念日，而是創造出薩克斯風……此一美妙樂器的製造者，薩克斯先生（Antoine Joseph Adolphe Sax，1814－1894）的生日，有趣亦或是巧合？<span style="font-weight: bold; ">就星相學的角度，今天出生的人擁有著使人「熱血沸騰」的本領。</span></div>
 <div class="draft-block draft--p left">老師先下兩首音樂好了，<span style="font-weight: bold; ">既然「斯斯」有兩種，當然，「熱血沸騰」也有兩種。</span></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/iZcWtrE33FI"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/iZcWtrE33FI"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/LenZS_wsFLE"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/LenZS_wsFLE"></iframe></div>
 <div class="draft-block draft--p left">薩克斯先生呢，他誕生於比利時，父親乃專業樂器製造商。大約在26歲的時候，約莫西元1840年間，他率先創造出薩克斯風這款樂器……最早的開發初衷，他希望能<span style="font-weight: bold; ">憑藉著靈活、生動的吹奏感，與得以輕鬆在戶外各場域進行演出的方便攜帶性，打入宮廷之外的大眾娛樂市場。</span></div>
 <div class="draft--imgFloat draft-block"><div><img src="https://images.vocus.cc/25d87655-bdb7-4ca0-9568-c64b6af88d58.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">By Unknown author - http://yourrichardson.dallasnews.com/2014/10/10/sax-on-the-side-saxophone-quartet-to-celebrate-the-200th-birthday-of-the-inventor-of-the-saxophone/, Public Domain, https://commons.wikimedia.org/w/index.php?curid=44813008</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">後來透過正式的對外樂器發表會，薩克斯先生更請來了專屬的「代言人」予以推薦，誰？鼎鼎大名的法國古典音樂作曲家，也就是他的好朋友白遼士（Hector Louis Berlioz，1803－1869）！</div>
 <div class="draft-block draft--p left">當年白遼士的介紹詞還挺有趣的……<span style="font-weight: bold; ">嗯！薩克斯風是一種改造過的開孔大號樂器。</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">五年之後，法國國家軍樂隊有意汰換掉舊式、保守的樂隊樂器，並決議採公開招標的方式來決定新的器樂供應商，薩克斯先生於是積極地向時任法國國防部部長等高層們毛遂自薦薩克斯風的優勢……當然，此舉也正面槓上了傳統的樂器製造商……</div>
 <div class="draft-block draft--p left">這場另類的「軍購案」，雙方沒有請來立委或議員助陣，更不會出現「慶記」或「消波塊」，而是說好彼此來個君子之爭！用公開的音樂競演，由薩克斯風樂隊挑戰傳統軍樂隊，並交由現場的觀眾們來進行公平的決選，用以定奪最後的訂單鹿死誰手。</div>
 <div class="draft-block draft--p left">到了遴選當天……</div>
@@ -38,6 +28,4 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">最後，</div>
 <div class="draft-block draft--p left">現場觀眾壓根兒不在意樂團編制是人多還是人少，反倒深深地被這種新式樂器所吹奏的動人聲色給吸引住了，因此投票結果一面倒，大家給予薩克斯先生和他的薩克斯風樂隊熱烈的掌聲與喝采！薩克斯風亦如願成為了法國國家軍樂隊的制式樂器之一！</div>
 <div class="draft-block draft--p left">西元1846年，薩克斯先生進一步取得了法國政府給予薩克斯風的發明製造專利，他也開始於法國巴黎設廠，量產這款新樂器；但薩克斯也不忘推陳出新，前後陸續推出了十四款不同音域的薩克斯風；隨著法國軍樂隊的採用，西元十九世紀中期之後，薩克斯風陸續成為其他歐洲國家軍樂隊的標準樂器，不只聞名於歐陸，甚至今日在全世界都擁有死忠的愛樂者呢！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/NENfMe74kKA"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/NENfMe74kKA"></iframe></div>
