Update VOCUS 2022-11-12 patch

--- a/_posts/2022-11-11-VOCUS-哈勇家-日常就是共勞共享共怨.html
+++ b/_posts/2022-11-11-VOCUS-哈勇家-日常就是共勞共享共怨.html
@@ -37,5 +37,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/5112563f-7696-4978-aa7a-539a99115b17.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/29bea26e-e54c-4154-9faf-bcb4bf3d22f6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">電影中其實所有的點都圍繞著「GAGA」並也在開始就點出來，我自己思考這部電影所要表達的是泰雅族最純粹與最初，關於每個族人與族人之間的默契。<br><br>什麼是我們一起承擔，什麼是我們一同快樂，那些痛苦和煩惱的事物並不會隨時間消逝，但是一同面對和彼此諒解和幫助，是泰雅最核心的精神，不該隨著外來事物與文化的融合而消失最初台灣原住民的根。<br> <br>有趣的是電影中有幾幕雪景，是在拍攝電影時真實的台灣下雪場景，當地的原住民表示這是祖靈對於電影的祝福，並且在下雪的片段，導演也讓演員即興演出，並深信祖靈的存在。<br><br>《哈勇家》傳達出一種自然不做作的幽默，演員的演出很有默契也讓人容易入戲，且用一齣家庭磨合的故事帶出文化感，可以說比起用力刻劃歷史、吵鬧還原正統，要來的更有意義。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/VW3IuzoCHj4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/VW3IuzoCHj4"></iframe></div>
