--- a/_posts/2022-11-12-PQ-東突厥斯坦建國紀念日活動-呼籲台灣捍衛維吾爾人權.html
+++ b/_posts/2022-11-12-PQ-東突厥斯坦建國紀念日活動-呼籲台灣捍衛維吾爾人權.html
@@ -8,7 +8,7 @@ tags: blog
 author: 李 晏蓉
 ---
 
-<p>今（12） 日為「東突厥斯坦獨立建國紀念日」，臺灣東突厥斯坦協會與美國華府的維吾爾人權項目（Uyghur Human Rights Project）共同於立法院前舉辦紀念活動，升起東突厥斯坦國旗並演奏國歌，呼籲台灣人重視受到迫害的維吾爾人，勿忘他們也曾追求建立一個獨立國家。</p>
+<p>今（12） 日為「東突厥斯坦獨立建國紀念日」，台灣東突厥斯坦協會與美國華府的「維吾爾人權項目」（Uyghur Human Rights Project）共同於立法院前舉辦紀念活動，升起東突厥斯坦國旗並演奏國歌，呼籲台灣人重視受到迫害的維吾爾人，勿忘他們也曾追求建立一個獨立國家。</p>
 
 
 
@@ -16,11 +16,11 @@ author: 李 晏蓉
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712.jpg" alt="臺灣東突厥斯坦協會與美國華府的維吾爾人權項目於立法院前紀念東突厥斯坦建國，呼籲台灣人重視受到迫害的維吾爾人／圖：中央社" class="wp-image-120207" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712-768x576.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>臺灣東突厥斯坦協會與美國華府的維吾爾人權項目於立法院前紀念東突厥斯坦建國，呼籲台灣人重視受到迫害的維吾爾人／圖：中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712.jpg" alt="臺灣東突厥斯坦協會與美國華府的維吾爾人權項目於立法院前紀念東突厥斯坦建國，呼籲台灣人重視受到迫害的維吾爾人／圖：中央社" class="wp-image-120207" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ee73a89-img_5712-768x576.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>台灣東突厥斯坦協會與美國華府的「維吾爾人權項目」於立法院前紀念東突厥斯坦建國，呼籲台灣人重視受到迫害的維吾爾人／圖：中央社</figcaption></figure></div>
 
 
 
-<h2><strong>▌</strong>臺灣東突厥斯坦協會：應珍惜台灣所擁有的主權及民主自由</h2>
+<h2><strong>▌</strong>東突厥斯坦協會：應珍惜台灣所擁有的主權及民主自由</h2>
 
 
 
