--- a/_posts/2022-11-13-INITIUM-早报-美国民主党保住国会参议院多数党地位.html
+++ b/_posts/2022-11-13-INITIUM-早报-美国民主党保住国会参议院多数党地位.html
@@ -32,7 +32,7 @@ author:
 <p>穆萨尔宣布胜选后对记者表示，她将尽力服务全体国民，努力维护宪法保障国民享有的人权和民主权利。</p>
 <p>斯洛文尼亚总统作为国家元首，主要是礼节性职务。不过总统同时也是武装部队总司令，还能提名包括中央银行行长在内部分高级官员，大多数提名必须经议会通过。</p>
 <h3>土耳其伊斯坦布尔商业街爆炸，至少6死81伤</h3>
-<p>当地周日下午4时20分左右，土耳其首都伊斯坦布尔市中心一条商业街发生爆炸，<a href="https://www.bbc.com/news/world-europe-63615076">造成至少6人死亡，81人受伤</a>。</p>
+<p>当地周日下午4时20分左右，土耳其伊斯坦布尔市中心一条商业街发生爆炸，<a href="https://www.bbc.com/news/world-europe-63615076">造成至少6人死亡，81人受伤</a>。</p>
 <p>副总统奥克塔伊（Fuat Oktay）称，据信爆炸是由一名女子实施的恐怖袭击。不过目前没有组织宣布负责。</p>
 <p>总统埃尔多安表示将惩罚肇事者。他在记者会上谴责这是一次“卑鄙的袭击”，又称空气中弥漫“恐怖气息”。</p>
 <h3>美国德州航展两飞机相撞6人死亡</h3>
