--- a/_posts/2022-11-13-VOCUS-俄烏戰爭檢討-2.html
+++ b/_posts/2022-11-13-VOCUS-俄烏戰爭檢討-2.html
@@ -9,9 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote class="draft-block draft--blockquote">先，烏克蘭進入動員，守軍的數量大幅擴增，而軍人素質也上升。因為連高學歷的烏克蘭人都參軍了，這在西方培訓新聞可以看出，高素質的烏克蘭軍人，使用武器上手極快。更重要的是，基層軍官素質提高，都能對國家整體戰略有清晰的認識，自然在前線戰術可以臨機應變。</blockquote>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/63648660fd89780001a3cf4b">俄烏戰爭檢討（1）｜方格子 vocus</a></h3><span>這幾周要來談一下，打了大半年的俄烏戰爭，究竟有多少可以檢討的地方。不說總檢討，是因為可能幾十年後才能窺得全貌，故只談談當前可以確定的。 先從小的概念開始，再一路擴及到大的好了，不然一下子大格局下去又要被罵。雖說先講小的也會被罵啦 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F944197b1-ce33-42db-9484-2821f579fef3.png%26width%3D1200%26sign%3DOOVzQotmxCqv0jTkdjo_-i06sIQ1pWzF23Mlp6gr5eg&amp;width=550&amp;sign=ZwqzSzaN-SaKbPEyrFvuqIbqS5dNEL6Zy2mx_iUS4w8"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">上週提到步兵跟戰車，這周談點其他的。在空中與防空上，有什麼可以檢討的地方？</div>
 <div class="draft-block draft--p left">有，第一個要檢討的是我們心態，全世界只有一個美軍，我們不能把其他國家的空軍並列。筆者看了些制空權探討，覺得……說不定是定義要改，原本的完全制空權指的是完全控制空中，使敵軍無法活動，而這狀況看來也只有美軍可以達到完全制空的標準，其他國家恐怕是最多達到部分制空。(定義到唯一應該不能稱之為有效？)</div>
 <h3 class="draft-block draft--h3" name="header-7ja8p">空軍能量不足，俄國無法取得完整制空權</h3>
@@ -21,12 +19,11 @@ author: 王立第二戰研所
 <h3 class="draft-block draft--h3" name="header-21j7r">俄空中劣勢，仍是飛機數量與人力素質問題？</h3>
 <div class="draft-block draft--p left">為何狀況這麼糟糕？</div>
 <div class="draft-block draft--p left">一方面，俄軍的先進戰機數量沒那麼多，或者說打破我們傳統印象，真正可以列入先進電子作戰系統的戰機不多，有些曾被吹噓不差的，看來不過爾爾，連對付烏克蘭舊蘇聯裝備的防空力量，都僅能算是佔據優勢而非徹底壓制。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/oG-Y0D_9dx4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/oG-Y0D_9dx4"></iframe></div>
 <div class="draft-block draft--p left">當空軍無法前進獵殺烏軍的防空，就只能一半依靠地面推進，取得地上的安全。但烏軍戰線收縮，也代表原本數量不夠的防空飛彈集中，搭配還存在的戰機，戰力在部分區域高於俄軍，數量導致質變，使得俄空軍不敢深入。</div>
 <div class="draft-block draft--p left">筆者個人嚴重懷疑，俄國飛官的素質是否夠強，還是高素質人力都被打光了？因為第一階段作戰時，不少俄機展現其勇猛果敢，各位要明白，獵殺敵人雷達車、防空飛彈車也要勇氣，因為你可以打人家、人家也可以打你。尤其是深入敵境，己方僚機不多，如何搭配打擊，膽小如鼠者可做不到。而在第二階段，俄軍出動次數少，深入打擊更少，原因何在？</div>
 <div class="draft-block draft--p left">反過來看，烏克蘭的防空系統，開戰前被認為多為老舊蘇製品，面對同樣知道底細的俄軍，恐怕撐不過多久，結果也是跌破專家眼鏡。</div>
 <div class="draft-block draft--p left">空地一體，各國說了很多年，看來可以對中大型規模以上國家成功執行者，也只有美帝，第二名都做成這樣，顯然不是有演習就夠的。 </div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-ajioo">無法全天候制空，讓烏克蘭獲得摸清俄軍底細的時間</h3>
 <div class="draft-block draft--p left">究其原因，還是跟進攻、防守差異脫不了關係。</div>
 <div class="draft-block draft--p left">俄軍進攻模式非常標準，先是大量導彈襲擊，攻擊雷達、防空中心，以及沒有運動的車輛。緊接著就是空軍出動，攜帶反輻射飛彈，獵殺可能運作的防空飛彈車，同時間空優戰機也保持制空權，以利其他對地攻擊機可以發揮。</div>
