--- a/_posts/2022-11-16-INMEDIA-飛彈落入波蘭釀兩死-美聯社引述官員指屬烏軍攔截導彈.html
+++ b/_posts/2022-11-16-INMEDIA-飛彈落入波蘭釀兩死-美聯社引述官員指屬烏軍攔截導彈.html
@@ -11,6 +11,7 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_389.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>圖片來源：Wolski o Wojnie/Facebook</em></p>
 <p><font color="red">（獨媒報導）</font>波蘭外交部表示，一枚俄羅斯製導彈於當地時間周二（15日）下午，落入波蘭鄰近烏克蘭邊境的村莊普熱沃杜夫（Przewodów），造成兩人死亡。但俄方否認責任 ，指有關襲擊並非由俄羅斯造成。美聯社今日引述美國官員說法，指初步調查結果顯示，擊中波蘭的導彈是由烏克蘭軍方向入侵的俄羅斯導彈發射。</p>
 <p>三名不願透露姓名的美國官員向美聯社表示，初步評估顯示，該枚導彈是烏克蘭軍方週二向入侵的俄羅斯導彈發射的，當時烏克蘭的電力基礎設施正遭攻勢。早前已有分析指，該導彈有可能是一枚來自烏克蘭的 S-300 防空導彈，因有關武器最初是在俄羅斯製造。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7Z80oHT3WX" title="315444198_626517449475222_2211793603237179161_n"><img src="https://live.staticflickr.com/65535/52502620797_575334c5e7_c.jpg" width="800" alt="315444198_626517449475222_2211793603237179161_n" /></a><br /><em>圖片來源：President Joe Biden/Facebook</em></p>
 <p><strong>拜登：從飛行軌迹看不似由俄國發射</strong></p>
 <p>於印尼參與二十國集團（G20）峰會的美國總統拜登，今早與北約成員國及其他G7國家領袖舉行緊急會議討論事件。拜登向傳媒表示，初步認為從飛行軌迹上來看，導彈不大可能從俄國發射，峰會領袖一致支持波蘭繼續調查事件經過。</p>
 <p><strong>俄國防部：波蘭官員和媒體蓄意挑釁</strong></p>
