--- a/_posts/2022-11-17-INITIUM-早报-佩洛西不再寻求连任美国众议院民主党领袖.html
+++ b/_posts/2022-11-17-INITIUM-早报-佩洛西不再寻求连任美国众议院民主党领袖.html
@@ -18,7 +18,7 @@ author:
 <h3>MH17空难荷兰法官缺席审判三人终身监禁</h3>
 <p><a href="https://www.bbc.com/news/world-europe-63637625">荷兰法官缺席审判</a>两名俄罗斯男子和一名乌克兰男子在马航MH17航班被击落案件中构成谋杀，判处三人终身监禁。2014年7月17日，马航MH17航班空难导致298名乘客及机组人员死亡。</p>
 <p>法官们认定，这是一次蓄意击落飞机行动，尽管三名被告当时意图击落一架军用飞机，而非民航客机。</p>
-<p>这三人中，乌克兰分离势力军事领导人伊戈尔·吉尔金（Igor Girkin）因部署导弹和寻求俄罗斯帮助而被定罪。俄罗斯人谢尔盖·杜宾斯基（Sergei Dubinsky）被认定下令并监督了将布克（Buk）导弹发射器运输到乌克兰境内的工作。列昂尼德·哈尔琴科（Leonid Kharchenko）被认定根据杜宾斯基的指示，监督了布克导弹的使用。据信三人目前都在俄罗斯境内。</p>
+<p>这三人中，乌克兰分离势力军事领导人伊戈尔·斯特列尔科夫（Igor Strelkov）因部署导弹和寻求俄罗斯帮助而被定罪。俄罗斯人谢尔盖·杜宾斯基（Sergei Dubinsky）被认定下令并监督了将山毛榉（Buk）导弹发射器运输到乌克兰境内的工作。列昂尼德·哈尔琴科（Leonid Kharchenko）被认定根据杜宾斯基的指示，监督了山毛榉导弹的使用。据信三人目前都在俄罗斯境内。</p>
 <p>此案还有第四名被告、另一名俄罗斯人奥列格·普拉托夫（Oleg Pulatov），他是审判时唯一有法律代表的被告。法官们发现他也知道导弹事宜，不过宣吿他无罪。</p>
 <h3>波兰或将允许乌克兰人员进入导弹爆炸现场</h3>
 <p><a href="https://www.reuters.com/world/europe/ukraine-will-probably-get-access-blast-site-says-polish-official-2022-11-17/">据路透社报导</a>，波兰总统杜达周四前往靠近乌克兰边境被导弹击中的村庄视察时称，如果乌克兰人员想要调查此地情况，“我们可以向他们展示”。</p>
