--- a/_posts/2022-11-17-VOCUS-change-與-更-改-換-易-變-化-替-遷變-感化-化妝-更衣-換餐-換搭-換手-轉換-錢零-找零-更年期-等橋接.html
+++ b/_posts/2022-11-17-VOCUS-change-與-更-改-換-易-變-化-替-遷變-感化-化妝-更衣-換餐-換搭-換手-轉換-錢零-找零-更年期-等橋接.html
@@ -63,7 +63,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">change = change + nge&nbsp;省一個&nbsp;nge =&nbsp;更&nbsp;+&nbsp;年期&nbsp;=&nbsp;更年期</span>，此時第二個&nbsp;nge&nbsp;之&nbsp;n&nbsp;約略形聲漢語「年」的起音，ge&nbsp;約略形聲漢語「期」再轉音。也可能約略形聲轉換漢語「<span style="font-weight: bold; ">期年易</span>」而意通「期年更」(即「更年期」的同義倒裝詞)。</div>
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">作爲動詞或名詞使用的&nbsp;change&nbsp;一字相當有趣，它從幾個簡單的漢字語意「更；改；換；易；變；化；替」變換組合出更多的類似語意，又部份加入「遷」、「代」、「革」、「置」、「取」、「交」等漢字語意來搭配，變化出更豐富的字義。也許可以說，change&nbsp;一字本身的造字內涵，就已經充分表現了「變易」或「更替」這類概念。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-d1pss"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">change for：換車赴于</span>，類似「轉車至」<span style="font-weight: bold; ">；換搭赴于</span>，類似「改搭到」或「轉搭到」之類<span style="font-weight: bold; ">；change成</span>，此時<span style="font-weight: bold; ">&nbsp;for =&nbsp;ㄈ和戈&nbsp;=&nbsp;ㄇ和戈&nbsp;= n和戈&nbsp;=&nbsp;勹和戈&nbsp;=&nbsp;成；change關聯于</span>，意指「關聯于(某個事物)的change」之意<span style="font-weight: bold; ">；change為了</span>，意指「為了(某個事物)而改變」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">change into：change成</span>，此時<span style="font-weight: bold; ">&nbsp;into =&nbsp;點勹ㄧ𠄌one =&nbsp;丶勹ㄧ㇂一&nbsp;=&nbsp;丶勹ㄧ㇂/ =&nbsp;丶勹ㄧ㇂丿&nbsp;=&nbsp;成；change至</span>，此時<span style="font-weight: bold; ">&nbsp;into =&nbsp;一u土&nbsp;=&nbsp;一ㄙ土&nbsp;=&nbsp;至</span>。</div>
@@ -81,9 +80,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">changeling：換太子之狸貓</span>，意即<span style="font-weight: bold; ">&nbsp;changeling = ch.ang.e.ling =&nbsp;手奐.a聯子.E.里ㄇ狗&nbsp;=&nbsp;扌奐.aa子.ㄓ.里貓犭=&nbsp;換.Aㄧ子.之.狸貓&nbsp;=&nbsp;換.Λㄧ子.之.狸貓&nbsp;=&nbsp;換.人一丶子.之.狸貓&nbsp;=&nbsp;換.大丶子.之.狸貓&nbsp;=&nbsp;換.太子.之.狸貓&nbsp;=&nbsp;換太子之狸貓，</span>或寓意「被調包的孩子」，可能源自漢字古文化一則「狸貓換太子」的民間傳說故事，或引申爲「長相怪異的孩子」甚至是「蛋混」(本意可能是指「被搞混出身的卵蛋」)&nbsp;、「笨蛋」、「傻蛋」或「低能兒」。亦即，changeling&nbsp;又可能意通 <span style="font-weight: bold; ">oaf (卵爲混；蛋有混；蛋笨；蛋傻。其中&nbsp;o&nbsp;約略象徵「蛋」或「卵」，f&nbsp;則代表&nbsp;fool&nbsp;而轉換漢字「笨」或「傻」)</span> 或早期的寫法 <span style="font-weight: bold; ">ouf (卵爲混；蛋有混；蛋笨；蛋傻)</span> 及 <span style="font-weight: bold; ">oph (卵被混；蛋混，此時或即「混蛋」的同義倒裝詞；蛋笨；蛋傻)</span> 等，這類意思也是參考字根研究者的解釋。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">unchangeable：無然changeable；無能changeable；無以changeable；不能changeable</span>，此時<span style="font-weight: bold; ">&nbsp;un- = LI能&nbsp;= little一能&nbsp;=&nbsp;小一能&nbsp;=&nbsp;不能</span>。其相關單字還有 unchangeably、unchangeableness、unchanged。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">exchange：易交change；交易change；雙向change；交易；交換；更換；易換；調換；互換；兑換；兑匯；率匯；外匯；錢換；交流；交換見意；交換見識；交情</span>，此處的「交情」是指「交換情報」之類<span style="font-weight: bold; ">；交戰；exchange機；exchange局(所；處；地；台；站；點)。</span>此字有一部份含義與&nbsp;change&nbsp;相同，但主要是用於雙向的交易或交換之行為或事項。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/syFZfO_wfMQ"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/syFZfO_wfMQ"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/syFZfO_wfMQ" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/syFZfO_wfMQ</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：One Direction - Night Changes /&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
