--- a/_posts/2022-11-17-VOCUS-說故事的人-故事構成的時代樣貌.html
+++ b/_posts/2022-11-17-VOCUS-說故事的人-故事構成的時代樣貌.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">但畢竟是一部專門在探訪故事的紀錄片電影，可以說整體的節奏真的很沉悶，雖然有一些故事開頭會勾起一些探究慾，但畢竟是很古老的故事，所以整體的翻轉、和結尾有時候都幾乎可以猜想出來，如果追求有趣的驚艷的現代讀者，可能會少了很多聽故事時那種懸疑刺激的趣味。但另一方面也是前者的故事造就了後來創作者的養分，加上技術飛躍的今日，才讓故事越發有趣。</div>
 <div class="draft-block draft--p left">以一個同為創作者或讀者來說，如今通俗小說的讀者和聽眾越發速食化，且希望聽到自己想要的，以我熟知的耽美領域來說，什麼主題、配對是誰、結局好或壞、甚至連屬性都得標示清楚，因為許多讀者希望看自己想看到的，不想在其他領域多花時間。</div>
 <div class="draft-block draft--p left">以商業的角度看，這種鎖定消費族群明確的方式快又有效，但似乎少了踏入未知領域的勇氣。踩雷是必然，有時候心中的神作是需在無數地雷區挖掘，跨出舒適圈的那一部，才能得到的獎勵。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/_w14zYptqoE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/_w14zYptqoE"></iframe></div>
