--- a/_posts/2022-11-19-INMEDIA-欖球世界盃國歌字幕錯顯示-glory-to-hong-kong-香港欖總-獲解釋是圖像操作員失誤.html
+++ b/_posts/2022-11-19-INMEDIA-欖球世界盃國歌字幕錯顯示-glory-to-hong-kong-香港欖總-獲解釋是圖像操作員失誤.html
@@ -8,11 +8,11 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202211196_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>繼上周日亞洲七人欖球系列賽，亞洲橄欖球總會誤將《願榮光歸香港》當成香港國歌，有網民發現，在11月7日香港對葡萄牙的「15人欖球世界盃外圍賽國際遺材賽」網上精華片段中播放國歌《義勇軍進行曲》時，字幕卻打出「GLORY TO HONG KONG NATIONAL ANTHEM OF HONG KONG」，已將《願榮光歸香港》當成香港國歌。相關影片今午（19日）在頻道中已被下架，香港欖球總會下午發聲明表示，主辦方國際欖球理事會已就事件致歉，並解釋出錯是「圖像操作員」的失誤。文化體育及旅遊局局長楊潤雄則認為事件不能接受，難以相信短時間內欖球賽事接二連三發生國歌相關事件。</p>
+<img src="https://www.inmediahk.net/files/column_images/202211196_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>繼上周日亞洲七人欖球系列賽，亞洲橄欖球總會誤將《願榮光歸香港》當成香港國歌，有網民發現，在11月6日香港對葡萄牙的「15人欖球世界盃外圍賽國際遺材賽」網上精華片段中播放國歌《義勇軍進行曲》時，字幕卻打出「GLORY TO HONG KONG NATIONAL ANTHEM OF HONG KONG」，已將《願榮光歸香港》當成香港國歌。相關影片今午（19日）在頻道中已被下架，香港欖球總會下午發聲明表示，主辦方國際欖球理事會已就事件致歉，並解釋出錯是「圖像操作員」的失誤。文化體育及旅遊局局長楊潤雄則認為事件不能接受，難以相信短時間內欖球賽事接二連三發生國歌相關事件。</p>
 <p><strong>RugbyPass精華片段顯示播放國歌時 字幕打出「GLORY TO HONG KONG」</strong></p>
 <p>香港男子十五人欖球代表隊早前出戰國際遺材賽，爭奪明年在法國舉行的欖球世界盃入場券。賽事比賽地點是杜拜，香港隊在11月7日的賽事中，最終以14:42的比分不敵葡萄牙。</p>
 <p>在RugbyPass 的YouTube 頻道中，精華片段顯示在奏唱國歌環節中，在播放中國國歌《義勇軍進行曲》的時候，字幕卻打出「GLORY TO HONG KONG NATIONAL ANTHEM OF HONG KONG」，誤將《願榮光歸香港》當成香港國歌。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2YxqBaw7j4" title="無標題"><img src="https://live.staticflickr.com/65535/52509395851_91c6ff2390_b.jpg" width="1024" alt="無標題" /></a><br /><em>11月7日港隊對葡萄牙播放中國國歌時，字幕打出「GLORY TO HONG KONG」 （圖片來源：網上影片）<br /></em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2YxqBaw7j4" title="無標題"><img src="https://live.staticflickr.com/65535/52509395851_91c6ff2390_b.jpg" width="1024" alt="無標題" /></a><br /><em>11月6日港隊對葡萄牙播放中國國歌時，字幕打出「GLORY TO HONG KONG」 （圖片來源：網上影片）<br /></em></p>
 <p><strong>香港欖總：至比賽結束前都無法得悉錯誤</strong></p>
 <p>香港欖球總會下午發聲明表示，得知國際欖球理事會（World Rugby）在11月6日舉行香港對葡萄牙的賽事轉播中，比賽前播放中國國歌時字幕出現錯誤。香港欖總指，至比賽結束前，香港隊或管理團隊都無法得悉這個錯誤。而國際欖球理事會或其製作團隊也沒有向任何港隊成員及管理人員查詢國歌的名稱；香港欖總亦未被告知國歌的名稱會出現在轉播報道中。</p>
 <p><strong>香港欖總：獲解釋是「圖像操作員」失誤</strong></p>
@@ -21,11 +21,11 @@ author: 獨媒報導
 <p><strong>香港欖總：聯絡多個網上平台 確保片段刪除</strong></p>
 <p>香港欖球總會續表示，聯絡了國際欖球理事會和多個網上平台，確保片段刪除；另會查閱港隊參與的其他國際賽事片段，以確認是否還有其他同類事件。</p>
 <p><strong>國際欖球理事會兩度出錯 7月港隊對湯加賽事同標錯國歌</strong></p>
-<p>香港欖總稍後確認，國際欖球理事會兩度出錯。早於今年 7 月 23 日欖球世界盃外圍賽港隊對湯加的比賽，同樣使用錯誤字幕，標錯國歌成「GLORY TO HONG KONG」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/H88n31fJbK" title="螢幕截圖 2022-11-19 下午5.59.26"><img src="https://live.staticflickr.com/65535/52509967495_d4f338ba08_b.jpg" width="1024" alt="螢幕截圖 2022-11-19 下午5.59.26" /></a><br /><em>國際欖球理事會兩度出錯，早於今年 7 月 23 日欖球世界盃外圍賽港隊對湯加的比賽，同樣使用錯誤字幕（圖片來源：網上影片）</em></p>
+<p>香港欖總稍後確認，國際欖球理事會兩度出錯。早於今年 7月23日欖球世界盃外圍賽港隊對湯加的比賽，同樣使用錯誤字幕，標錯國歌成「GLORY TO HONG KONG」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/H88n31fJbK" title="螢幕截圖 2022-11-19 下午5.59.26"><img src="https://live.staticflickr.com/65535/52509967495_d4f338ba08_b.jpg" width="1024" alt="螢幕截圖 2022-11-19 下午5.59.26" /></a><br /><em>國際欖球理事會兩度出錯，早於今年7月23日欖球世界盃外圍賽港隊對湯加的比賽，同樣使用錯誤字幕（圖片來源：網上影片）</em></p>
 <p><strong>楊潤雄：難以相信短時間內欖球賽事接二連三發生國歌相關事件</strong></p>
 <p>文化體育及旅遊局局長楊潤雄今日出席活動後表示，今早得悉11月6日香港對葡萄牙賽事中，電視轉播字幕打錯成「2019年黑暴事件裏面嘅一首歌」。楊認為事件不能接受，指國歌代表尊嚴、應受尊重；亦難以相信短時間內欖球賽事接二連三發生與國歌相關事件。</p>
-<p>他指，當局將嚴肅跟進，正與香港欖球總會了解事件。初步得知，比賽由世界欖球總會舉辦，發生錯誤後已馬上更正。</p>
+<p>楊潤雄指，當局將嚴肅跟進，正與香港欖球總會了解事件。初步得知，比賽由世界欖球總會舉辦，發生錯誤後已馬上更正。</p>
 <p><strong>上周南韓七欖錯播香港國歌作「願榮光」 香港欖總曾稱再有類同事件將退賽<br /></strong></p>
 <p>在上周日南韓仁川舉行的亞洲七人欖球系列賽中，主辦方將香港國歌誤播成《願榮光歸香港》，亞洲橄欖球總會及後承認，未有向韓方賽會提供正確的國歌。香港欖球總會發聲明指，如日後再發生播錯國歌事件，球隊將立即退出比賽。</p>
 </div></div></div>
