--- a/_posts/2022-11-19-INMEDIA-食環署研新方法滅鼠-卓永興稱不考慮獎賞制.html
+++ b/_posts/2022-11-19-INMEDIA-食環署研新方法滅鼠-卓永興稱不考慮獎賞制.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p><strong>使用鼠膠或影響無辜動物 卓永興：係一個取捨嘅問題</strong></p>
 <p>卓永興在有線節目《有理有得傾》上表示，食環署於7月成立了19隊夜間滅鼠隊，在7至9月期間共捕捉約6,000隻活鼠，較以往增加約5成，形容「成效都唔錯」。他指，食環署正研究使用新型滅鼠工具及鼠餌，利用熱能科技監察老鼠出沒，在情況嚴重時會用鼠膠。</p>
 <p>節目主持人關注鼠膠或會傷害其他無辜動物。對此，卓永興則認為要取平衡：「究竟社會最大利益喺邊？鼠膠好多人都知相當有效，如果你話我又要捉老鼠，但我又要全部動物我都要關顧到，呢個有難度、係一個取捨嘅問題」。他表示鼠膠會在晚上使用，當局能「密密地巡」，若有動物不慎誤踩，當局亦能在短時間發現，及早介入。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/C69R440345" title="310834889_139060355534356_4240410083745356761_n"><img src="https://live.staticflickr.com/65535/52422446675_dc7760cdde_b.jpg" width="1024" alt="310834889_139060355534356_4240410083745356761_n" /></a><br /><em>卓永興早前巡查打擊衛生黑點（資料來源：卓永興Facebook）</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/C69R440345" title="310834889_139060355534356_4240410083745356761_n"><img src="https://live.staticflickr.com/65535/52422446675_dc7760cdde_b.jpg" width="1024" alt="310834889_139060355534356_4240410083745356761_n" /></a><br /><em>卓永興早前巡查打擊衛生黑點（圖片來源：卓永興Facebook）</em></p>
 <p><strong>卓永興稱不會考慮獎賞制：真係有人可以整一個老鼠農場，養一班老鼠俾你</strong></p>
 <p>被問到會否仿效內地，使用獎賞制打擊鼠患，市民捉到老鼠後能有獎賞。卓永興則表示「唔係冇諗過，但你俾幾多錢？2,000蚊、3,000蚊捉一隻？真係有人可以去整一個老鼠農場咁，養一班老鼠俾你」，認為做法不簡單，當局暫不會考慮。至於全港性滅鼠行動，卓永興指會聯同各政府部門、私人屋苑、公共屋邨、滅鼠專家及食肆、街市等一同工作，詳情將在下月底前公布。</p>
 <p><strong>卓永興指店舖阻街罰款過低 </strong></p>
