Update VOCUS 2022-11-21 patch

--- a/_posts/2022-11-19-VOCUS-俄烏戰爭檢討-2.html
+++ b/_posts/2022-11-19-VOCUS-俄烏戰爭檢討-2.html
@@ -20,7 +20,7 @@ author: 王立第二戰研所
 <h3 class="draft-block draft--h3" name="header-21j7r">俄空中劣勢，仍是飛機數量與人力素質問題？</h3>
 <div class="draft-block draft--p left">為何狀況這麼糟糕？</div>
 <div class="draft-block draft--p left">一方面，俄軍的先進戰機數量沒那麼多，或者說打破我們傳統印象，真正可以列入先進電子作戰系統的戰機不多，有些曾被吹噓不差的，看來不過爾爾，連對付烏克蘭舊蘇聯裝備的防空力量，都僅能算是佔據優勢而非徹底壓制。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/oG-Y0D_9dx4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/oG-Y0D_9dx4"></iframe></div>
 <div class="draft-block draft--p left">當空軍無法前進獵殺烏軍的防空，就只能一半依靠地面推進，取得地上的安全。但烏軍戰線收縮，也代表原本數量不夠的防空飛彈集中，搭配還存在的戰機，戰力在部分區域高於俄軍，數量導致質變，使得俄空軍不敢深入。</div>
 <div class="draft-block draft--p left">筆者個人嚴重懷疑，俄國飛官的素質是否夠強，還是高素質人力都被打光了？因為第一階段作戰時，不少俄機展現其勇猛果敢，各位要明白，獵殺敵人雷達車、防空飛彈車也要勇氣，因為你可以打人家、人家也可以打你。尤其是深入敵境，己方僚機不多，如何搭配打擊，膽小如鼠者可做不到。而在第二階段，俄軍出動次數少，深入打擊更少，原因何在？</div>
 <div class="draft-block draft--p left">反過來看，烏克蘭的防空系統，開戰前被認為多為老舊蘇製品，面對同樣知道底細的俄軍，恐怕撐不過多久，結果也是跌破專家眼鏡。</div>
