--- a/_posts/2022-11-19-VOCUS-在-內向-與-愛書-的小日子裡.html
+++ b/_posts/2022-11-19-VOCUS-在-內向-與-愛書-的小日子裡.html
@@ -26,7 +26,7 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">《愛書小日子》則是漫畫家黛比對自己閱讀的興趣愛好告白的作品，分享給全世界跟她同樣愛書的小書痴們，看了第一集發現續集要再等一年的晴天霹靂、說好只讀一章節卻通霄的無憾感，外出旅遊不知要帶哪一本書出門，乾脆全都帶上了，各種讓人覺得莫名其妙，但愛書成癡的人卻會懂的有趣作品。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/2a52729a-74d0-42e5-87ef-f3222408b6de.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/bdbf0cbf-99b2-4938-bdd6-5d28cc2b3a6e.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/mtNRMZe0wmY&amp;t=220s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/mtNRMZe0wmY"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-36pv1">《內向／愛書小日子》分析與延伸：</h3>
 <div class="draft-block draft--p left">很多人會誤解內向跟外向只有一個面向，常常會將他們二分法，以為人就永遠是那個面向這是錯誤的認知。每個人在自己的性格光譜中都具備了外向與內向的特質。</div>
 <div class="draft-block draft--p left">例如有人善於交際場合但卻也希望有個人時光，或是不喜歡與他人來往，但是在上台報告一樣可以做到盡善盡美，故內向與外向其實有時候是人格特質，還有對熟悉與不熟悉事物的表現方式。</div>
@@ -55,4 +55,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">如果可以接受圖文畫風，對題材有意思的人，這兩本書很適合一起購買，閱讀時間不會太長，很輕鬆自在，適合在咖啡館等待下午茶時拿出來消磨時間。而在《內向小日子》裡，可能是同樣生為亞洲人的關係，雖然不像作者那麼排斥人群與聚會，但我總有點懂她想逃離吵雜環境，讀處的心情。</div>
 <div class="draft-block draft--p left">讓我有感觸的是關於黛比另一半這件事，她的老公會願意讓她有自己的時間，不打擾、不抱怨，讓她去沉澱情緒和自己的世界裡，等她準備好，自己去面對問題與困難。</div>
 <div class="draft-block draft--p left">這讓我覺得黛比會願意去了解內向者的世界、與不逃避應該有的人群聚會和工作環境，是一個很大的助力，也讓外向老公、內向老婆之間相處有著那平衡，與生活之趣。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/LkfvJEj2J4c"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/LkfvJEj2J4c"></iframe></div>
