--- a/_posts/2022-11-20-VOCUS-俄烏戰爭檢討-3.html
+++ b/_posts/2022-11-20-VOCUS-俄烏戰爭檢討-3.html
@@ -22,7 +22,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">換句話說，各種先進武器，看起來非常有用，都侷限在特殊環境下。偶有佳作，俄軍也扭轉不了整體戰局，更多情況是烏克蘭用輕裝甲車高速側襲，在部分地區使用舊型<a href="https://zh.wikipedia.org/wiki/T-72%E4%B8%BB%E6%88%B0%E5%9D%A6%E5%85%8B" target="_blank" class="draft--a">T72</a>（1976年開始服役）戰車大舉進攻，反而可以有效推回俄軍。</div>
 <div class="draft-block draft--p left">簡單結論，假設烏克蘭是喬治亞，那麼<a href="https://zh.m.wikipedia.org/zh-tw/%E4%BF%84%E6%A0%BC%E6%88%B0%E7%88%AD" target="_blank" class="draft--a">俄軍要全面進攻到勝利</a>會非常容易，喬治亞沒有足夠縱深，軍事武備也很難消耗俄軍。但烏克蘭說大，也……開戰前的戰力比，普遍只有俄軍的三分之一，質跟量都是。（編按：喬俄戰爭，2008年8月1日，喬治亞與南奧塞提亞開戰，8日喬治亞包圍南奧塞提亞首都，引起俄羅斯派軍介入，9日開始反攻，12日俄羅斯便控制喬治亞全境）</div>
 <div class="draft-block draft--p left">但就防守作戰來說，一台依靠混凝土建物的T72，顯然沒有比進攻的<a href="https://zh.m.wikipedia.org/zh-tw/T-80%E4%B8%BB%E6%88%B0%E5%9D%A6%E5%85%8B" target="_blank" class="draft--a">T80</a>差到哪，甚至<a href="https://zh.m.wikipedia.org/zh-tw/T-64%E4%B8%BB%E6%88%98%E5%9D%A6%E5%85%8B" target="_blank" class="draft--a">T64</a>都能有效阻擋。相較之下，如何布置砲兵陣地有效轟擊，在戰線推進上還有用多了。（編按：T80可以當成T64的升級版，T72則可當成T80的低階版）</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/OY4SiGRl6dU&amp;t=25s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/OY4SiGRl6dU"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-3qcc4">現代戰爭傾家蕩產，全民防衛能有效抵禦侵略</h3>
 <div class="draft-block draft--p left">而這又回到準備問題，如果俄國知道戰況至此，砲彈生產量會不早點加大嗎？不僅僅是俄國，烏克蘭也是如此，並沒有比較好。而西方也一樣，西方各國援助烏克蘭，也是沒幾個月就耗盡庫存，反過來看美國才是特例，精準武器、彈藥的量都保有到足以摧毀中型國家的全部兵力，更恐怖的是維持這些庫存的經濟力。</div>
 <div class="draft-block draft--p left">或許，我們應該要重新認清，把「戰爭是非常燒錢的事情」，修正為</div>
