--- a/_posts/2022-11-21-INMEDIA-9.29政總外暴動-5人判監55至40月-2少年入教導所.html
+++ b/_posts/2022-11-21-INMEDIA-9.29政總外暴動-5人判監55至40月-2少年入教導所.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_394.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年9月29日的「全球反極權遊行」，46人被指在政府總部外參與暴動，其中一宗8人案件，5人開審前認罪，1人在審訊中途改為認罪，餘下2人經審訊被裁定暴動罪成，還柙至今日（21日）於區域法院判刑。區院暫委法官鄭念慈指，暴動規模不小且針對政總，被告以黑衣和蒙面來掩飾身份，但考慮各人有良好背景，只因一念之差而犯案，最終判其中5人監禁4年7個月至3年4個月不等。兩名案發時年僅14及15歲的男生，則被判入教導所。</p>
 <p>被告為：謝曉峰（案發20歲、現23歲）、姓馮男學生（案發15歲、現年18歲）、14歲男學生、曾憲嘉（案發24歲、現27歲）、黃昱翔（案發20歲、現24歲）、劉燕嫦（案發29歲，技術員）、游茜茹（案發22歲，產品檢測員）和范瑜（案發30歲、現32歲，髮型師）。</p>
-<p>區院暫委法官鄭念慈指，本案暴動規模不小，歷時30分鐘，參與者針對金鐘政府總部，又築起「傘陣」，用欄杆及雜物堵塞夏愨道，導致交通幾近癱瘓。案發時大量人群聚集，本案被告被捕時身穿黑衣及以口罩遮蓋容貌，目的是掩飾身份、避免付上刑責。</p>
+<p>區院暫委法官鄭念慈指，本案暴動規模不小，歷時30分鐘，參與者針對金鐘政府總部，又築起「傘陣」，用欄杆及雜物堵塞夏愨道，導致交通幾近癱瘓。案發時大量人群聚集，本案被告被捕時身穿黑衣及以口罩遮蓋容貌，目的是掩飾身份、避免負上刑責。</p>
 <p>對於辯方求情指案件出現延誤，鄭官指雖然案發至今有3年時間，但審期早於2021年1月定下，看不到有延誤檢控的情況。然而，他考慮所有被告案發時均沒有案底、背景良好，只因一念之差而鑄成大錯，認為可就此酌情減刑。</p>
 <p>考慮過往案例及本案案情，對於曾向政總投擲物品的被告，包括謝曉峰、曾憲嘉、黃昱翔和范瑜，鄭官以監禁4年9個月為量刑起點。鄭官指各人過往沒有案底及背景良好，乃因一念之差而犯案，扣減2個月刑期。黃及范早於審前覆核階段表示認罪，故獲減刑至3年4個月。</p>
 <p>謝經審訊被裁定罪成，鄭官指縱使明白判監會對他帶來沉重打擊，影響前途及未來就業機會，令家人失望，但個人情況並非減刑理由，因此沒有進一步扣減，判監4年7個月。</p>
