--- a/_posts/2022-11-22-PQ-習近平對杜魯道-戰狼對話-中國對加拿大的滲透與干預.html
+++ b/_posts/2022-11-22-PQ-習近平對杜魯道-戰狼對話-中國對加拿大的滲透與干預.html
@@ -36,7 +36,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-1024x576.jpg" alt="" class="wp-image-121137" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>加拿大的中共代理人，「多倫多華人團體聯合總會」永久榮譽主席魏成義<br>圖／擷取自Global News新聞</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-1024x576.jpg" alt="" class="wp-image-121137" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/80cce6e1-2022-11-23-01.48.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>加拿大的中共代理人，「多倫多華人團體聯合總會」永久榮譽主席魏成義<br>圖／擷取自Global News新聞</figcaption></figure></div>
 
 
 
