--- a/_posts/2022-11-22-VOCUS-給基督教會的信.html
+++ b/_posts/2022-11-22-VOCUS-給基督教會的信.html
@@ -8,8 +8,7 @@ tags: blog
 author: 陳易宏
 ---
 
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/e7ytLpO7mj0"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/e7ytLpO7mj0"></iframe></div>
 <div class="draft-block draft--p right">Original Video by Dr. Jordan B Peterson</div>
 <div class="draft-block draft--p right">Translated by Joseph Ī-Hông Tân under fair use clause. Contact isawamaho@gmail.com for any copyright claim.</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
@@ -52,11 +51,3 @@ author: 陳易宏
 <div class="draft-block draft--p left">去吧！現在！在為時已晚之前！時間已迫在眉睫！</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/9090d686-e13d-4852-b57d-f5bfc2f97ea4.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
