--- a/_posts/2022-11-23-INMEDIA-海防博物館明重開-不提-殖民地-強調英國實行-殖民管治.html
+++ b/_posts/2022-11-23-INMEDIA-海防博物館明重開-不提-殖民地-強調英國實行-殖民管治.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/new_12.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>香港海防博物館在2019年初閉館，將於明日（24日）重開，亦被賦予「說好海防故事」新任務。海防博物館今日設傳媒預覽，新館設13個展覽廳，第2展廳敘述「不平等條約與香港割佔」，沒有使用「殖民地」字眼，採用英國對香港實行「殖民管治」，直至1997年7月1日「中國恢復對香港行使主權」，強調香港的主權仍屬中國，與教育局早前「香港不是英國殖民地」的口徑一致。</p>
+<img src="https://www.inmediahk.net/files/column_images/new_12.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">（獨媒報導）</font>香港海防博物館在2019年初閉館，將於明日（24日）重開，亦被賦予「說好海防故事」新任務。海防博物館今日設傳媒預覽，新館設13個展覽廳，第2展廳敘述「不平等條約與香港割佔」，沒有使用「殖民地」字眼，採用英國對香港實行「殖民管治」，直至1997年7月1日「中國恢復對香港行使主權」，強調香港的主權仍屬中國，與教育局早前「香港不是英國殖民地」的口徑一致。</p>
 <p>香港歷史博物館館長（藏品及海防博物館）何惠儀表示，更新後展廳增至13個，包括常設展覽「香港海防故事」的11個展廳、「鯉魚門炮台」及專題展覽廳：「昔日軍人與社會」各1個展廳。</p>
 <p><strong>加強展示日本侵華、日軍侵港內容</strong></p>
 <p>常設展廳展出約400套展品、近540張圖片，及逾70組多媒體及互動裝置，包括剪影動畫、沉浸式體驗香港保衞戰，介紹香港歷代防務建置、軍事佈局、抗日戰爭歷史、多元族裔軍人在港服役的故事及中國人民解放軍駐香港部隊等，並加強展示有關日本侵華、日軍侵港、香港保衞戰、東江縱隊港九獨立大隊等内容。</p>
@@ -27,4 +27,9 @@ author: 獨媒報導
 <p>另外，「鯉魚門軍事要塞史蹟徑」的史蹟點由16個增加至24個，包括56套展品、逾170張圖片及20多個多媒體及互動裝置，如建在岸邊岩洞的魚雷發射站、屹立山嶺的鯉魚門堡壘、多座炮台及堡壘炮台彈藥庫等。</p>
 <p>何惠儀表示參觀者可使用博物館的導覧平台「智博行（iM Guide)」，了解史蹟徑的軍事遺蹟、武器操作等知識。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Um2zX0q24W" title="無標題"><img src="https://live.staticflickr.com/65535/52517973322_4b000e502b_c.jpg" width="800" alt="無標題" /></a></p>
+<p>海防博物館的重開典禮，主禮嘉賓包括政務司副司長卓永興、文化體育及旅遊局局長楊潤雄、博物館諮詢委員會蘇彰德、康樂及文化事務署署長劉明光及香港歷史博物館總館長伍志和，並由陳芷菁擔任大會司儀。</p>
+<p>卓永興致辭時表示，盼博物館能發揮歷史文化教育的功能，培養年輕人愛國情操，又認為館方加強展示日軍侵華及東江縱隊港九大隊抗日的內容做法「非常適切」，公眾能細味中國人民抵禦外敵的激揚意志。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/73ysb5mtR0" title="Untitled"><img src="https://live.staticflickr.com/65535/52518989018_745a238f84_z.jpg" alt="Untitled" /></a><br /><em>政務司副司長卓永興</em></p>
+<p>典禮上，館方邀請無伴奏合唱團表演MIRROR成員姜濤的歌曲《作品的說話》，此外，還有《信者得愛》、 《生命有價》和《imagine》 。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6YsC8b47YC" title="Untitled"><img src="https://live.staticflickr.com/65535/52518927500_9873e2e677_z.jpg" alt="Untitled" /></a></p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
